# snielsen.dev

./: .dockerignore  .env.example  .gitignore  Dockerfile  justfile
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html  config.ts
frontend/src/lib/: Footer.svelte  HLine.svelte  Icon.svelte  Layout.svelte  NavBar.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
